# OpenGL-Shenanigans

./: .env.ps1  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py  conanfile.txt  vcpkg.json
cmake/: copy-resources.cmake
src/: 1-common.cpp  1-common.h  1.1-empty-window.cpp  CMakeLists.txt  empty-window.cpp
src/1-common/: 1-common.cpp  1-common.h  CMakeLists.txt  OwnedPtr.cppm  ResourceUtils.cppm  Resources.cpp  Resources.h  Shader.Utils.cppm  Shader.cpp  Shader.cppm  Shader.h  Texture.cpp  Texture.cppm  Texture.h  WindowBoilerplate.Utils.cppm  WindowBoilerplate.cpp  WindowBoilerplate.cppm  WindowBoilerplate.h
src/1.1-empty-window/: 1.1-empty-window.cpp  CMakeLists.txt
src/1.2-hello-triangle/: 1.2-hello-triangle.cpp  CMakeLists.txt
src/1.3-shaders/: 1.3-color-interpolation.cpp  1.3-shaders.cpp  1.3-shaders.frag  1.3-shaders.vert  CMakeLists.txt
src/1.4-texture/: 1.4-camera.cpp  1.4-container.cpp  1.4-container.vert  1.4-cubes.cpp  1.4-cubes.frag  1.4-cubes.vert  CMakeLists.txt
